# alpha-runtime

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  serve.py
apps/: __init__.py
apps/api/: config.py  logging.py  main.py  state.py  trading_day_bounds.py
apps/api/routes/: bootstrap.py  candles.py  chart.py  context.py  health.py  positions.py  signals.py
apps/api/websockets/: feeds.py
infra/docker/: Dockerfile
infra/docker/timescaledb/: init.sql
runtime/bootstrap/: __init__.py  config.py  historical_loader.py  service.py
runtime/candle_engine/: __init__.py  engine.py
runtime/context_engine/: __init__.py  engine.py
runtime/execution_engine/: __init__.py  engine.py
runtime/indicator_engine/: __init__.py  engine.py
runtime/market_data/: __init__.py  adapter.py
runtime/market_data/ibkr/: __init__.py  adapter.py  config.py  session_classifier.py
runtime/microstructure_engine/: __init__.py  engine.py
runtime/orderbook_engine/: __init__.py  engine.py
runtime/position_engine/: __init__.py  engine.py
runtime/quote_engine/: __init__.py  engine.py
runtime/replay_engine/: __init__.py  engine.py  recorder.py
runtime/risk_engine/: __init__.py  config.py  engine.py
runtime/strategy_engine/: __init__.py  base.py
runtime/strategy_engine/strategies/: __init__.py  vwap_reclaim.py
scripts/: seed_db.py
tests/: test_bootstrap.py  test_candle_engine.py  test_microstructure.py  test_position_engine.py  test_risk_engine.py  test_trading_day_bounds.py  test_vwap_reclaim.py
